--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ html {
 }
 
 .heading-container__heading--big {
-  background-color: white;
+  background-color: #bdbdc0;
   padding: 2rem;
   border-top-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
@@ -81,7 +81,7 @@ html {
     color: whitesmoke;
 }
 .heading-container__heading--small1 {
-  background-color: white;
+  background-color: #bdbdc0;
   padding: 0.7rem;
   border-top-left-radius: 0.7rem;
   border-bottom-right-radius: 0.7rem;
@@ -102,7 +102,7 @@ html {
     line-height: 5rem;
   }
 .heading-container__heading--big-last {
-    background-color: white;
+    background-color: #bdbdc0;
     padding: 2rem;
     border-top-left-radius: 2rem;
     border-bottom-right-radius: 2rem;
@@ -136,12 +136,12 @@ html {
     border-top-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
     outline: 0.4rem inset blue;
-    background-color: white;
+    background-color: #bdbdc0;
     outline-offset: 0.6rem;
     line-height: 2.5rem;
   }
   .heading-container__heading--big-last {
-    background-color: white;
+    background-color: #bdbdc0;
     padding: 1rem;
     border-top-left-radius: 2rem;
     border-bottom-right-radius: 2rem;
@@ -155,7 +155,7 @@ html {
     border-top-left-radius: 0.3rem;
     border-bottom-right-radius: 0.3rem;
     outline: 0.2rem inset cyan;
-    background-color: white;
+    background-color: #bdbdc0;
     outline-offset: 0.1rem;
     line-height: 2.4rem;
   }
